admin-service/src/main/java/com/example/adminservice/module/common/error/CustomException.java
package com.example.adminservice.module.common.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException{
    private final ErrorCode errorCode;
    private final String method;
}
